misskey/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: misskey
  labels:
    app: misskey
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: misskey
  template:
    metadata:
      labels:
        app: misskey
    spec:
      containers:
        - name: misskey
          image: docker.io/misskey/misskey:2026.10.0
          volumeMounts:
            - name: misskey-config
              mountPath: /misskey/.config
              readOnly: true
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: "200m"
              memory: "2Gi"
            requests:
              cpu: "100m"
              memory: "1Gi"

          startupProbe:
            httpGet:
              path: /api/server-info
              port: 3000
            failureThreshold: 60
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /robots.txt
              port: 3000
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /api/server-info
              port: 3000
            periodSeconds: 15
      volumes:
        - name: misskey-config
          secret:
            secretName: misskey-config
