misskey/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: misskey-web
  namespace: misskey
  labels:
    app: misskey-web
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: misskey-web
  template:
    metadata:
      labels:
        app: misskey-web
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: misskey-web
                topologyKey: "kubernetes.io/hostname"
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: "kubernetes.io/hostname"
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: misskey-web
      containers:
        - name: misskey-web
          image: misskey/misskey:2025.10.0@sha256:8d49c5b0d3f03384f1b8d1878146226892d6aeceaaee2626a6b11915828fc4c1
          volumeMounts:
            - name: misskey-default-config-file
              mountPath: /misskey/.config
              readOnly: true
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: "500m"
              memory: "1Gi"
            requests:
              cpu: "100m"
              memory: "256Mi"
      volumes:
        - name: misskey-default-config-file
          secret:
            secretName: misskey-default-config
