misskey/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: misskey
spec:
  selector:
    app: misskey
  ports:
    - name: http
      port: 3000
      targetPort: 3000
